# 2022-assignment-sklearn

./: pyproject.toml  sklearn_questions.py  sklearn_questions2.py  sklearn_questions_amine.py  test.ipynb  test_sklearn.ipynb  test_sklearn_questions.py  tests_notebook.ipynb
.ipynb_checkpoints/: sklearn_questions-checkpoint.py  test_sklearn-checkpoint.ipynb
